--- a/.github/workflows/maven-build-caching-samples-verification.yml
+++ b/.github/workflows/maven-build-caching-samples-verification.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'temerin'
+          distribution: 'temurin'
       - name: Setup Node.js and Npm
         uses: actions/setup-node@v3
         with:
