Revert "Add tracing for fingerprint operations to investigate cache miss"
This reverts commit 2bc4d4cbf638c3acc92c87b08de46c4ca90d596f.

--- a/.github/workflows/maven-build-caching-samples-verification.yml
+++ b/.github/workflows/maven-build-caching-samples-verification.yml
@@ -31,7 +31,7 @@ jobs:
             -c "$GITHUB_SHA" \
             -p "build-caching-maven-samples" \
             -g "verify" \
-            -a "-Dorg.slf4j.simpleLogger.log.gradle.goal.cache=debug -Dorg.slf4j.simpleLogger.log.gradle.goal.fingerprint=trace -B" \
+            -a "-Dorg.slf4j.simpleLogger.log.gradle.goal.cache=debug -B" \
             -s "https://ge.solutions-team.gradle.com" \
             -f 2>&1 | tee -a /tmp/build.log
           echo "hasUnknownParams=$(grep "Build caching was not enabled for this goal execution because the following parameters were not handled" /tmp/build.log | wc -l)" >> $GITHUB_OUTPUT
