--- a/.github/workflows/shell-script-validation.yml
+++ b/.github/workflows/shell-script-validation.yml
@@ -1,6 +1,11 @@
 name: Validate Shell Scripts
 
-on: [ push, pull_request, workflow_dispatch ]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   validation:
