--- a/build-caching-maven-samples/spotless-project/pom.xml
+++ b/build-caching-maven-samples/spotless-project/pom.xml
@@ -16,6 +16,14 @@
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
                 <version>2.33.0</version>
+                <executions>
+                    <execution>
+                        <id>spotless-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <java>
                         <includes>
@@ -48,20 +56,41 @@
                                                 <name>baseDir</name>
                                                 <excludes>
                                                     <exclude>.idea/*</exclude>
+                                                    <exclude>target/*</exclude>
                                                 </excludes>
                                             </fileSet>
                                         </fileSets>
                                         <properties>
-                                            <property><name>applySkip</name></property>
-                                            <property><name>encoding</name></property>
-                                            <property><name>checkSkip</name></property>
-                                            <property><name>filePatterns</name></property>
-                                            <property><name>formats</name></property>
-                                            <property><name>goal</name></property>
-                                            <property><name>setLicenseHeaderYearsFromGitHistory</name></property>
-                                            <property><name>skip</name></property>
-                                            <property><name>ratchetFrom</name></property>
-                                            <property><name>upToDateChecking</name></property>
+                                            <property>
+                                                <name>applySkip</name>
+                                            </property>
+                                            <property>
+                                                <name>encoding</name>
+                                            </property>
+                                            <property>
+                                                <name>checkSkip</name>
+                                            </property>
+                                            <property>
+                                                <name>filePatterns</name>
+                                            </property>
+                                            <property>
+                                                <name>formats</name>
+                                            </property>
+                                            <property>
+                                                <name>goal</name>
+                                            </property>
+                                            <property>
+                                                <name>setLicenseHeaderYearsFromGitHistory</name>
+                                            </property>
+                                            <property>
+                                                <name>skip</name>
+                                            </property>
+                                            <property>
+                                                <name>ratchetFrom</name>
+                                            </property>
+                                            <property>
+                                                <name>upToDateChecking</name>
+                                            </property>
                                         </properties>
                                         <ignoredProperties>
                                             <ignore>repositorySystemSession</ignore>
@@ -75,28 +104,64 @@
                                             <name>licenseHeader</name>
                                             <inputs>
                                                 <properties>
-                                                    <property><name>file</name></property>
-                                                    <property><name>content</name></property>
-                                                    <property><name>delimiter</name></property>
-                                                    <property><name>skipLinesMatching</name></property>
+                                                    <property>
+                                                        <name>file</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>content</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>delimiter</name>
+                                                    </property>
+                                                    <property>
+                                                        <name>skipLinesMatching</name>
+                                                    </property>
                                                 </properties>
                                             </inputs>
                                         </property>
                                         <!-- Entities used by Spotless with parameters defined in FormatterFactory -->
-                                        <property><name>java</name></property>
-                                        <property><name>python</name></property>
-                                        <property><name>scala</name></property>
-                                        <property><name>groovy</name></property>
-                                        <property><name>javascript</name></property>
-                                        <property><name>json</name></property>
-                                        <property><name>kotlin</name></property>
-                                        <property><name>cpp</name></property>
-                                        <property><name>antlr4</name></property>
-                                        <property><name>sql</name></property>
-                                        <property><name>typescript</name></property>
-                                        <property><name>yaml</name></property>
-                                        <property><name>pom</name></property>
-                                        <property><name>markdown</name></property>
+                                        <property>
+                                            <name>java</name>
+                                        </property>
+                                        <property>
+                                            <name>python</name>
+                                        </property>
+                                        <property>
+                                            <name>scala</name>
+                                        </property>
+                                        <property>
+                                            <name>groovy</name>
+                                        </property>
+                                        <property>
+                                            <name>javascript</name>
+                                        </property>
+                                        <property>
+                                            <name>json</name>
+                                        </property>
+                                        <property>
+                                            <name>kotlin</name>
+                                        </property>
+                                        <property>
+                                            <name>cpp</name>
+                                        </property>
+                                        <property>
+                                            <name>antlr4</name>
+                                        </property>
+                                        <property>
+                                            <name>sql</name>
+                                        </property>
+                                        <property>
+                                            <name>typescript</name>
+                                        </property>
+                                        <property>
+                                            <name>yaml</name>
+                                        </property>
+                                        <property>
+                                            <name>pom</name>
+                                        </property>
+                                        <property>
+                                            <name>markdown</name>
+                                        </property>
                                     </nestedProperties>
                                     <outputs>
                                         <directories>
@@ -104,7 +169,8 @@
                                                 <name>buildDir</name>
                                             </directory>
                                         </directories>
-                                        <cacheableBecause>check should only run when inputs change</cacheableBecause>
+                                        <cacheableBecause>check should only run when inputs change
+                                        </cacheableBecause>
                                     </outputs>
                                 </plugin>
                             </plugins>
