--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -51,6 +51,12 @@ updates:
       time: "02:00"
     ignore:
       - dependency-name: "com.gradle:build-scan-plugin"
+        versions: [ "1.16" ]
+  - package-ecosystem: "maven"
+    directory: "convention-develocity-maven-extension/extension"
+    schedule:
+      interval: "daily"
+      time: "02:00"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
