--- a/gradle-enterprise-conventions-maven-extension/extension/pom.xml
+++ b/gradle-enterprise-conventions-maven-extension/extension/pom.xml
@@ -78,6 +78,11 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <transformers>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer"/>
+                    </transformers>
+                </configuration>
             </plugin>
         </plugins>
     </build>
