Add gherkin goal parameter to caching instructions

--- a/build-caching-maven-samples/spotless-project/pom.xml
+++ b/build-caching-maven-samples/spotless-project/pom.xml
@@ -172,6 +172,9 @@
                                         <property>
                                             <name>markdown</name>
                                         </property>
+                                        <property>
+                                            <name>gherkin</name>
+                                        </property>
                                     </nestedProperties>
                                     <outputs>
                                         <directories>
