--- a/build-caching-maven-samples/kotlin-project/pom.xml
+++ b/build-caching-maven-samples/kotlin-project/pom.xml
@@ -106,6 +106,9 @@
                                         <fileSets>
                                             <fileSet>
                                                 <name>sourceDirs</name>
+                                                <normalization>
+                                                    <ignoreLineEndings>true</ignoreLineEndings>
+                                                </normalization>
                                             </fileSet>
                                             <fileSet>
                                                 <name>classpath</name>
