Apply empty directory normalization to kotlin:compile goal

--- a/build-caching-maven-samples/kotlin-project/pom.xml
+++ b/build-caching-maven-samples/kotlin-project/pom.xml
@@ -107,6 +107,7 @@
                                             <fileSet>
                                                 <name>sourceDirs</name>
                                                 <normalization>
+                                                    <ignoreEmptyDirectories>true</ignoreEmptyDirectories>
                                                     <ignoreLineEndings>true</ignoreLineEndings>
                                                 </normalization>
                                             </fileSet>
