Apply line ending and empty directory normalization to asciidoctor-project

--- a/build-caching-maven-samples/asciidoctor-project/pom.xml
+++ b/build-caching-maven-samples/asciidoctor-project/pom.xml
@@ -69,6 +69,10 @@
                     <fileSets>
                       <fileSet>
                         <name>sourceDirectory</name>
+                        <normalization>
+                          <ignoreEmptyDirectories>true</ignoreEmptyDirectories>
+                          <ignoreLineEndings>true</ignoreLineEndings>
+                        </normalization>
                       </fileSet>
                       <fileSet>
                         <name>templateDirs</name>
