Apply line ending and empty directory normalization to avro-project

--- a/build-caching-maven-samples/avro-project/pom.xml
+++ b/build-caching-maven-samples/avro-project/pom.xml
@@ -75,6 +75,10 @@
                         <name>sourceDirectory</name>
                         <includesProperty>includes</includesProperty>
                         <excludesProperty>excludes</excludesProperty>
+                        <normalization>
+                          <ignoreEmptyDirectories>true</ignoreEmptyDirectories>
+                          <ignoreLineEndings>true</ignoreLineEndings>
+                        </normalization>
                       </fileSet>
                       <fileSet>
                         <name>testSourceDirectory</name>
