Apply line ending and empty directory normalization to clojure-project

--- a/build-caching-maven-samples/clojure-project/pom.xml
+++ b/build-caching-maven-samples/clojure-project/pom.xml
@@ -123,9 +123,17 @@
                       </fileSet>
                       <fileSet>
                         <name>testSourceDirectories</name>
+                        <normalization>
+                          <ignoreEmptyDirectories>true</ignoreEmptyDirectories>
+                          <ignoreLineEndings>true</ignoreLineEndings>
+                        </normalization>
                       </fileSet>
                       <fileSet>
                         <name>sourceDirectories</name>
+                        <normalization>
+                          <ignoreEmptyDirectories>true</ignoreEmptyDirectories>
+                          <ignoreLineEndings>true</ignoreLineEndings>
+                        </normalization>
                       </fileSet>
                       <fileSet>
                         <name>generatedSourceDirectory</name>
