Apply line ending and empty directory normalization to pmd-project

--- a/build-caching-maven-samples/pmd-project/pom.xml
+++ b/build-caching-maven-samples/pmd-project/pom.xml
@@ -50,11 +50,19 @@
                             <name>compileSourceRoots</name>
                             <includesProperty>includes</includesProperty>
                             <excludesProperty>excludes</excludesProperty>
+                            <normalization>
+                              <ignoreLineEndings>true</ignoreLineEndings>
+                              <ignoreEmptyDirectories>true</ignoreEmptyDirectories>
+                            </normalization>
                           </fileSet>
                           <fileSet>
                             <name>testSourceRoots</name>
                             <includesProperty>includes</includesProperty>
                             <excludesProperty>excludes</excludesProperty>
+                            <normalization>
+                              <ignoreLineEndings>true</ignoreLineEndings>
+                              <ignoreEmptyDirectories>true</ignoreEmptyDirectories>
+                            </normalization>
                           </fileSet>
                           <fileSet>
                             <name>excludeFromFailureFile</name>
