Apply line ending and empty directory normalization to spotless-project

--- a/build-caching-maven-samples/spotless-project/pom.xml
+++ b/build-caching-maven-samples/spotless-project/pom.xml
@@ -58,6 +58,10 @@
                                                     <exclude>.idea/*</exclude>
                                                     <exclude>target/*</exclude>
                                                 </excludes>
+                                                <normalization>
+                                                    <ignoreEmptyDirectories>true</ignoreEmptyDirectories>
+                                                    <ignoreLineEndings>true</ignoreLineEndings>
+                                                </normalization>
                                             </fileSet>
                                         </fileSets>
                                         <properties>
