Apply line ending and empty directory normalization to spring-cloud-contract-project

--- a/build-caching-maven-samples/spring-cloud-contract-project/pom.xml
+++ b/build-caching-maven-samples/spring-cloud-contract-project/pom.xml
@@ -78,6 +78,10 @@
                             <name>contractsDirectory</name>
                             <excludesProperty>excludedFiles</excludesProperty>
                             <includesProperty>includedFiles</includesProperty>
+                            <normalization>
+                              <ignoreEmptyDirectories>true</ignoreEmptyDirectories>
+                              <ignoreLineEndings>true</ignoreLineEndings>
+                            </normalization>
                           </fileSet>
                         </fileSets>
                         <ignoredProperties>
