Change from GString to String

--- a/convention-gradle-enterprise-gradle-plugin/example-builds/gradle_2.0/build.gradle
+++ b/convention-gradle-enterprise-gradle-plugin/example-builds/gradle_2.0/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
   repositories {
       mavenLocal()
-      maven { url "https://plugins.gradle.org/m2/" }
+      maven { url 'https://plugins.gradle.org/m2/' }
   }
   dependencies {
-      classpath "com.myorg:gradle-enterprise-conventions-gradle-plugin-gradle-2-through-4:1.0.0-SNAPSHOT"
+      classpath 'com.myorg:gradle-enterprise-conventions-gradle-plugin-gradle-2-through-4:1.0.0-SNAPSHOT'
   }
 }
 
-apply plugin: "com.myorg.gradle-enterprise-conventions-gradle-2-through-4"
-apply plugin: "java"
+apply plugin: 'com.myorg.gradle-enterprise-conventions-gradle-2-through-4'
+apply plugin: 'java'
 
