Use Gradle Toolchain feature

--- a/convention-gradle-enterprise-gradle-plugin/plugins/gradle-2-through-4/build.gradle
+++ b/convention-gradle-enterprise-gradle-plugin/plugins/gradle-2-through-4/build.gradle
@@ -16,8 +16,11 @@ dependencies {
     implementation "com.gradle:build-scan-plugin:1.16"
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
+}
 
 gradlePlugin {
     plugins {
