--- a/convention-gradle-enterprise-gradle-plugin/plugins/gradle-5-or-newer/build.gradle
+++ b/convention-gradle-enterprise-gradle-plugin/plugins/gradle-5-or-newer/build.gradle
@@ -15,8 +15,11 @@ dependencies {
     implementation 'com.gradle:gradle-enterprise-gradle-plugin:3.14.1'
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
+}
 
 gradlePlugin {
     plugins {
