--- a/convention-gradle-enterprise-gradle-plugin/plugins/gradle-2-through-4/build.gradle
+++ b/convention-gradle-enterprise-gradle-plugin/plugins/gradle-2-through-4/build.gradle
@@ -28,8 +28,8 @@ gradlePlugin {
         gradleEnterpriseConventions {
             // CHANGE ME: change for your organization
             id = 'com.myorg.convention-gradle-enterprise-gradle-2-through-4'
-            displayName = 'Build Scans Convension Plugin for Gradle 2.0 through Gradle 4.10.3'
-            description = 'A Gradle plugin to apply and configure the Gradle Enterprise Build Scans plugin for com.myorg'
+            displayName = 'Gradle Enterprise Convension Plugin for Gradle 2.0 through Gradle 4.10.3'
+            description = 'A Gradle plugin to apply and configure the Build Scan Gradle plugin for com.myorg'
             implementationClass = 'com.myorg.ConventionGradleEnterpriseGradlePlugin'
         }
     }
