Fix License information

--- a/gradle-enterprise-maven-extension-quarkus/pom.xml
+++ b/gradle-enterprise-maven-extension-quarkus/pom.xml
@@ -10,6 +10,21 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <licenses>
+        <license>
+            <name>Apache-2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>The Gradle team</name>
+            <organization>Gradle Inc.</organization>
+            <organizationUrl>https://gradle.com</organizationUrl>
+        </developer>
+    </developers>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.maven</groupId>
