Add Maven extension to make the Quarkus build goal cacheable (#835)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,11 @@ updates:
     schedule:
       interval: "daily"
       time: "02:00"
+  - package-ecosystem: "maven"
+    directory: "quarkus-build-caching-extension"
+    schedule:
+        interval: "daily"
+        time: "02:00"
   - package-ecosystem: "gradle"
     directory: "common-gradle-enterprise-gradle-configuration-groovy"
     registries:
