--- a/quarkus-build-caching-extension/pom.xml
+++ b/quarkus-build-caching-extension/pom.xml
@@ -3,12 +3,23 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.gradle</groupId>
     <artifactId>quarkus-build-caching-extension</artifactId>
-    <version>0.9</version>
+    <version>0.1</version>
     <packaging>jar</packaging>
+
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>Maven extension to make the Quarkus build goal cacheable</description>
+    <url>https://github.com/gradle/gradle-enterprise-build-config-samples/tree/main/quarkus-build-caching-extension</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <scm>
+        <url>https://github.com/gradle/gradle-enterprise-build-config-samples</url>
+        <connection>scm:git:https://github.com/gradle/gradle-enterprise-build-config-samples.git</connection>
+        <developerConnection>scm:git:https://github.com/gradle/gradle-enterprise-build-config-samples.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
 
     <licenses>
         <license>
@@ -16,6 +27,21 @@
             <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
+
+    <distributionManagement>
+        <site>
+            <id>Documentation</id>
+            <url>https://github.com/gradle/gradle-enterprise-build-config-samples/tree/main/quarkus-build-caching-extension</url>
+        </site>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+    </distributionManagement>
 
     <developers>
         <developer>
