Use allprojects instead of afterProject for consistency with other samples

--- a/build-data-capturing-gradle-samples/capture-maxparallelforks/gradle-maxparallelforks.gradle
+++ b/build-data-capturing-gradle-samples/capture-maxparallelforks/gradle-maxparallelforks.gradle
@@ -3,8 +3,8 @@ if (!buildScan) {
     return
 }
 
-gradle.afterProject {
-    it.tasks.withType(Test).configureEach {
+allprojects {
+    tasks.withType(Test).configureEach {
         buildScan.value "${identityPath}#maxParallelForks", "${maxParallelForks}"
     }
 }
