Remove unnecessary curly braces from string template

--- a/build-data-capturing-gradle-samples/capture-max-parallel-forks/gradle-max-parallel-forks.gradle
+++ b/build-data-capturing-gradle-samples/capture-max-parallel-forks/gradle-max-parallel-forks.gradle
@@ -5,6 +5,6 @@ if (!buildScan) {
 
 allprojects {
     tasks.withType(Test).configureEach {
-        buildScan.value "${identityPath}#maxParallelForks", "${maxParallelForks}"
+        buildScan.value "${identityPath}#maxParallelForks", "$maxParallelForks"
     }
 }
