Configure new MojoExec.forceJava property

--- a/build-caching-maven-samples/exec-yarn-project/pom.xml
+++ b/build-caching-maven-samples/exec-yarn-project/pom.xml
@@ -119,6 +119,9 @@
                             <name>executable</name>
                           </property>
                           <property>
+                            <name>forceJava</name>
+                          </property>
+                          <property>
                             <name>skip</name>
                           </property>
                           <property>
