Missing opening quotation mark

--- a/common-gradle-enterprise-bazel-configuration/.bazelrc
+++ b/common-gradle-enterprise-bazel-configuration/.bazelrc
@@ -13,7 +13,7 @@ query --config=develocity
 # additional steps are required:
 # 1. Log into your Develocity server, from the upper-right corner click your user icon, then "My Settings".
 # 2. Ensure that your user has at least "Publish build scans" and either "Read and write build cache data" or 
-#    Read build cache data and write Bazel CAS data" permissions.
+#    "Read build cache data and write Bazel CAS data" permissions.
 # 3. Select "Access keys" on the left and then generate a new access key.
 # 4. In a .bazelrc file in your user’s home directory, add the following:
 #    common:develocity --remote_cache_header=Authorization=<<access key generated>>
