Rename Gradle Enterprise to Develocity
This replace Gradle Enterprise with Develocity in readme files, comments and bash scripts.

It does not change any code. It also does not modify the convention-gradle-enterprise-gradle-plugin to use the word Develocity instead of Gradle Enterprise.

--- a/.github/workflows/gradle-data-capturing-samples-verification.yml
+++ b/.github/workflows/gradle-data-capturing-samples-verification.yml
@@ -14,8 +14,8 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: 'GE Gradle plugin version'
-            sample-file: 'capture-ge-plugin-version/gradle-ge-plugin-version.gradle'
+          - name: 'DV Gradle plugin version'
+            sample-file: 'capture-dv-plugin-version/gradle-dv-plugin-version.gradle'
           - name: 'Git diffs'
             sample-file: 'capture-git-diffs/gradle-git-diffs.gradle'
           - name: 'OS processes'
