--- a/build-data-capturing-gradle-samples/capture-dv-plugin-version/gradle-dv-plugin-version.gradle
+++ b/build-data-capturing-gradle-samples/capture-dv-plugin-version/gradle-dv-plugin-version.gradle
@@ -1,5 +1,5 @@
 /**
- * This Groovy script captures the Gradle Enterprise Gradle plugin version as a custom value.
+ * This Groovy script captures the Develocity Gradle plugin version as a custom value.
  */
 
 def buildScanApi = project.extensions.findByName('buildScan')
@@ -9,5 +9,5 @@ if (!buildScanApi) {
 
 URL url = buildScanApi.class.classLoader.getResource("com.gradle.scan.plugin.internal.meta.buildAgentVersion.txt")
 String buildAgentVersion = url.text
-buildScan.value("GE Gradle plugin version", buildAgentVersion)
+buildScan.value("DV Gradle plugin version", buildAgentVersion)
 
