--- a/common-gradle-enterprise-maven-configuration/pom.xml
+++ b/common-gradle-enterprise-maven-configuration/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>common-gradle-enterprise-maven-configuration</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Common Gradle Enterprise Maven configuration</name>
+    <name>Common Develocity Maven configuration</name>
     <url>https://github.com/gradle/gradle-enterprise-build-config-samples/tree/main/common-gradle-enterprise-maven-configuration</url>
 
     <properties>
