--- a/build-data-capturing-gradle-samples/capture-develocity-plugin-version/gradle-develocity-plugin-version.gradle
+++ b/build-data-capturing-gradle-samples/capture-develocity-plugin-version/gradle-develocity-plugin-version.gradle
@@ -9,5 +9,5 @@ if (!buildScanApi) {
 
 URL url = buildScanApi.class.classLoader.getResource("com.gradle.scan.plugin.internal.meta.buildAgentVersion.txt")
 String buildAgentVersion = url.text
-buildScan.value("DV Gradle plugin version", buildAgentVersion)
+buildScan.value("Develocity Gradle plugin version", buildAgentVersion)
 
